--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
+    "start": "node server.js",
     "bot": "node telegram-bot.cjs"
   },
   "devDependencies": {
@@ -16,6 +17,7 @@
     "vite-plugin-solid": "^2.7.0"
   },
   "dependencies": {
+    "express": "^4.21.2",
     "node-telegram-bot-api": "^0.66.0",
     "pdf-lib": "^1.17.1",
     "solid-js": "^1.7.8"
