--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "start": "node server.js",
+    "start": "node server.cjs",
     "bot": "node telegram-bot.cjs"
   },
   "devDependencies": {
